# sandstone

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  vcpkg.cmake  vcpkg.json
data/elements/: CHLORINE.xml  EMPTY.xml  GRAVEL.xml  METAL.xml  SAND.xml  SLUDGE.xml  STEAM.xml  STONE.xml  WATER.xml
src/: main.cpp
src/core/: cell_data.cpp  cell_data.h  cell_matrix.cpp  cell_matrix.h  simulation.cpp  simulation.h
src/core/abstract/: base_loader.h  base_registry.h
src/elements/: element_loader.cpp  element_loader.h  element_registry.cpp  element_registry.h  element_type.cpp  element_type.h  empty.cpp  empty.h
src/elements/types/: gas.cpp  gas.h  immovable_solid.cpp  immovable_solid.h  liquid.cpp  liquid.h  movable_solid.cpp  movable_solid.h
src/elements/types/abstract/: solid.cpp  solid.h
src/structures/: point.cpp
src/systems/: input_system.cpp  input_system.h
src/types/: point.cpp  point.h  vector2i.cpp  vector2i.h
src/utils/: element_type_checker.cpp  element_type_checker.h  movement_utils.cpp  movement_utils.h  random_utils.cpp  random_utils.h
